Add API to retrieve merge candidates by patient ID. (#358)
* Add API to retrieve merge candidates by patient ID.

* fix

* fix

* fix map identifiers issue.