@@ -1,8 +1,6 @@
 package gov.cdc.nbs.deduplication.duplicates.service;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.argThat;
-import static org.mockito.ArgumentMatchers.eq;
+
 import static org.mockito.Mockito.*;
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -10,15 +8,13 @@ import gov.cdc.nbs.deduplication.constants.QueryConstants;
 import gov.cdc.nbs.deduplication.duplicates.model.MatchesRequireReviewResponse;
 import gov.cdc.nbs.deduplication.duplicates.model.MatchCandidateData;
 import gov.cdc.nbs.deduplication.duplicates.model.PatientNameAndTimeDTO;
-import gov.cdc.nbs.deduplication.duplicates.model.MatchesRequireReviewResponse.MatchRequiringReview;
-
+import gov.cdc.nbs.deduplication.duplicates.model.PersonMergeData;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentMatchers;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
@@ -27,9 +23,7 @@ import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 @ExtendWith(MockitoExtension.class)
 class MergeGroupHandlerTest {
@@ -38,13 +32,11 @@ class MergeGroupHandlerTest {
   private NamedParameterJdbcTemplate deduplicationTemplate;
 
   @Mock
-  private JdbcTemplate template;
-
-  @Mock
   private PatientRecordService patientRecordService;
 
   @InjectMocks
   private MergeGroupHandler mergeGroupHandler;
+
 
   @Test
   void testGetPotentialMatches() throws SQLException {
@@ -58,11 +50,9 @@ class MergeGroupHandlerTest {
         .thenReturn(patientNameAndTimeDTO1);
     when(patientRecordService.fetchPatientNameAndAddTime("personUid2"))
         .thenReturn(patientNameAndTimeDTO2);
-    when(deduplicationTemplate.getJdbcTemplate()).thenReturn(template);
-    when(template.queryForObject(QueryConstants.COUNT_POSSIBLE_MATCH_PATIENTS, Integer.class)).thenReturn(2);
 
     // Act
-    MatchesRequireReviewResponse result = mergeGroupHandler.getPotentialMatches(0, 10);
+    List<MatchesRequireReviewResponse> result = mergeGroupHandler.getPotentialMatches(0, 10);
 
     verifyPotentialMatchesResponse(result);
   }
@@ -73,15 +63,14 @@ class MergeGroupHandlerTest {
     when(deduplicationTemplate.query(
         eq(QueryConstants.POSSIBLE_MATCH_PATIENTS),
         any(MapSqlParameterSource.class),
-        ArgumentMatchers.<RowMapper<MatchCandidateData>>any())).thenReturn(Collections.emptyList());
-    when(deduplicationTemplate.getJdbcTemplate()).thenReturn(template);
-    when(template.queryForObject(QueryConstants.COUNT_POSSIBLE_MATCH_PATIENTS, Integer.class)).thenReturn(0);
+        ArgumentMatchers.<RowMapper<MatchCandidateData>>any()
+    )).thenReturn(Collections.emptyList());
 
     // Act
-    MatchesRequireReviewResponse result = mergeGroupHandler.getPotentialMatches(0, 10);
+    List<MatchesRequireReviewResponse> result = mergeGroupHandler.getPotentialMatches(0, 10);
 
     assertNotNull(result);
-    assertTrue(result.matches().isEmpty());
+    assertTrue(result.isEmpty());
   }
 
   private PatientNameAndTimeDTO mockPatientNameAndTimeDTO(String patientName) {
@@ -89,6 +78,7 @@ class MergeGroupHandlerTest {
     LocalDateTime dateTime = LocalDateTime.parse("2020-10-01-12-30", formatter);
     return new PatientNameAndTimeDTO(dateTime, patientName);
   }
+
 
   private ResultSet mockResultSetForMatchCandidates() throws SQLException {
     ResultSet rs = mock(ResultSet.class);
@@ -116,24 +106,25 @@ class MergeGroupHandlerTest {
         });
   }
 
-  private void verifyPotentialMatchesResponse(MatchesRequireReviewResponse result) {
+  private void verifyPotentialMatchesResponse(List<MatchesRequireReviewResponse> result) {
     assertNotNull(result);
-    assertEquals(2, result.matches().size());
+    assertEquals(2, result.size());
 
-    MatchRequiringReview response1 = result.matches().get(0);
+    MatchesRequireReviewResponse response1 = result.getFirst();
     assertEquals("personUid1", response1.patientId());
     assertEquals("John Doe", response1.patientName());
     assertEquals("2020-10-01T12:30", response1.createdDate());
     assertEquals("2020-10-01", response1.identifiedDate());
     assertEquals(3, response1.numOfMatchingRecords());
 
-    MatchRequiringReview response2 = result.matches().get(1);
+    MatchesRequireReviewResponse response2 = result.get(1);
     assertEquals("personUid2", response2.patientId());
     assertEquals("Andrew James", response2.patientName());
     assertEquals("2020-10-01T12:30", response2.createdDate());
     assertEquals("2020-10-02", response2.identifiedDate());
     assertEquals(5, response2.numOfMatchingRecords());
   }
+
 
   @Test
   void testUpdateMergeStatus() {
@@ -142,7 +133,8 @@ class MergeGroupHandlerTest {
 
     verify(deduplicationTemplate, times(1)).update(
         eq(QueryConstants.UPDATE_MERGE_STATUS_FOR_GROUP),
-        any(MapSqlParameterSource.class));
+        any(MapSqlParameterSource.class)
+    );
   }
 
   @Test
@@ -160,7 +152,8 @@ class MergeGroupHandlerTest {
     // Mock the call of getMpiIdsByPersonIds method
     when(deduplicationTemplate.query(
         eq(QueryConstants.PATIENT_IDS_BY_PERSON_UIDS),
-        argThat((MapSqlParameterSource params) -> params.getValue("personIds") != null),
+        argThat((MapSqlParameterSource params) ->
+            params.getValue("personIds") != null),
         ArgumentMatchers.<RowMapper<String>>any()))
         .thenReturn(mpiPersonIds);
 
@@ -176,7 +169,7 @@ class MergeGroupHandlerTest {
         any(MapSqlParameterSource.class)))
         .thenReturn(1);
 
-    // Mock the markSingleRemainingRecordAsNoMergeIfExists call
+    //Mock the markSingleRemainingRecordAsNoMergeIfExists call
     when(deduplicationTemplate.update(
         eq(QueryConstants.UPDATE_SINGLE_RECORD),
         any(MapSqlParameterSource.class)))
@@ -215,5 +208,69 @@ class MergeGroupHandlerTest {
           return personId != null && personId.equals(survivorPersonId);
         }));
   }
+
+
+  @Test
+  void testGetPotentialMatchesDetails() {
+    long personId = 123L;
+    List<String> possibleMatchesMpiIds = Arrays.asList("mpi1", "mpi2");
+    List<String> npsPersonIds = Arrays.asList("person1", "person2");
+    List<PersonMergeData> mockPersonMergeData = createMockPersonMergeData();
+
+    mockPossibleMatchesOfPatient(personId, possibleMatchesMpiIds);
+    mockPersonIdsByMpiIds(possibleMatchesMpiIds, npsPersonIds);
+    mockFetchPersonsMergeData(npsPersonIds, mockPersonMergeData);
+
+    // Act
+    List<PersonMergeData> result = mergeGroupHandler.getPotentialMatchesDetails(personId);
+
+    // Assert
+    verifyAndAssertResults(result);
+  }
+
+  private List<PersonMergeData> createMockPersonMergeData() {
+    return List.of(
+        new PersonMergeData(
+            "2023-01-01",
+            "test comment",
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Collections.emptyList(),
+            Collections.emptyList()
+        )
+    );
+  }
+
+  private void mockPossibleMatchesOfPatient(long personId, List<String> possibleMatchesMpiIds) {
+    when(deduplicationTemplate.query(
+        eq(QueryConstants.POSSIBLE_MATCH_IDS_BY_PATIENT_ID),
+        argThat((MapSqlParameterSource params) ->
+            Objects.equals(params.getValue("personUid"), personId)),
+        ArgumentMatchers.<RowMapper<String>>any()))
+        .thenReturn(possibleMatchesMpiIds);
+  }
+
+  private void mockPersonIdsByMpiIds(List<String> possibleMatchesMpiIds, List<String> npsPersonIds) {
+    when(deduplicationTemplate.query(
+        eq(QueryConstants.PERSON_UIDS_BY_MPI_PATIENT_IDS),
+        argThat((MapSqlParameterSource params) ->
+            Objects.equals(params.getValue("mpiPersonIds"), possibleMatchesMpiIds)),
+        ArgumentMatchers.<RowMapper<String>>any()))
+        .thenReturn(npsPersonIds);
+  }
+
+  private void mockFetchPersonsMergeData(List<String> npsPersonIds, List<PersonMergeData> mockPersonMergeData) {
+    when(patientRecordService.fetchPersonsMergeData(npsPersonIds)).thenReturn(mockPersonMergeData);
+  }
+
+  private void verifyAndAssertResults(List<PersonMergeData> result) {
+    assertNotNull(result);
+    assertEquals(1, result.size());
+    PersonMergeData firstResult = result.getFirst();
+    assertEquals("2023-01-01", firstResult.asOfDate());
+    assertEquals("test comment", firstResult.comments());
+  }
+
 
 }
